traces/bug_834.txt
examples++-load/Element_Mixte3d.cpp:2263: error: DEAD_STORE
  The value written to &doff (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Element_Mixte3d.cpp:2263:9: Write of unused value
2261.                       }
2262.                   }
2263.           int doff = Element::nf*3;
                ^
2264.           {
2265.               p=Element::nf*QFface.n;
